--- a/S-Calc/S_Calc/S_Calc.csproj
+++ b/S-Calc/S_Calc/S_Calc.csproj
@@ -38,6 +38,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="S_Calc_Extensions.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -55,7 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="RPNlib">
-      <HintPath>..\..\packages\RPNlib.dll</HintPath>
+      <HintPath>..\..\..\RPN\RPNlib\bin\Debug\RPNlib.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.3.3.180\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Core.dll</HintPath>
