--- a/S-Calc/S_Calc.Droid/S_Calc.Droid.csproj
+++ b/S-Calc/S_Calc.Droid/S_Calc.Droid.csproj
@@ -95,6 +95,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntryRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
