--- a/S-Calc/S_Calc/S_Calc.csproj
+++ b/S-Calc/S_Calc/S_Calc.csproj
@@ -55,8 +55,11 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Mono.CSharp">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\MonoAndroid\v1.0\Mono.CSharp.dll</HintPath>
+    </Reference>
     <Reference Include="RPNlib">
-      <HintPath>..\..\..\RPN\RPNlib\bin\Debug\RPNlib.dll</HintPath>
+      <HintPath>..\..\packages\RPNlib.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.3.3.180\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Core.dll</HintPath>
